k8s/manifests/http-server/deployment.k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: prime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      imagePullSecrets:
        - name: quay-registry-key
      containers:
        - name: http-server
          image: http-server:dzintars
          imagePullPolicy: Always # Because i am not handling labeling
          ports:
            - containerPort: 8080
          args:
            - '-d=/'
            - '-p=8080'
