k8s/manifests/http-server/service.k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
  namespace: prime
  labels:
    app: http-server
spec:
  selector:
    app: http-server
  ports:
    - name: http
      protocol: TCP
      port: 8000 # Host
      targetPort: 8080 # Container
