k8s/manifests/http-server/virtual-service.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-server-virtual-service
  namespace: prime
spec:
  hosts:
    - 'http-server.apps.ocp.oswee.com'
  gateways:
    - prime-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8000 # Port of the service
            # host: https-server-service.prime.svc.cluster.local
            host: http-server-service
